--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ body { margin: 3% 0; padding: 0; height: 90vh;
 
 .headertitle {
     position: absolute;
+    display: flex;
     top: 0;
     width: 100%;
     font-family: 'MuseoModerno', cursive;
@@ -63,9 +64,12 @@ body { margin: 3% 0; padding: 0; height: 90vh;
     padding-left: 5%;
     padding-top: 10px;
     padding-bottom: 15px;
-    max-height: 60px;
     background-color: #f1bc41;
     vertical-align: middle;
+    }
+
+    .headertitlemain {
+        width: 85%;
     }
 
 .headertitle h1{
@@ -125,7 +129,7 @@ body { margin: 3% 0; padding: 0; height: 90vh;
 
 .citylist h2 {
     position: absolute;
-    top: 9%;
+    margin-top: 10px;
     right: 0;
     left: 0;
     padding-top: 12px;
@@ -161,10 +165,14 @@ body { margin: 3% 0; padding: 0; height: 90vh;
     margin: 0 40px;
 }
 
+.grid-margin {
+    margin-bottom: 20px;
+}
+
 
 .grid-container {
     display: grid;
-    margin-top: 30px;
+    margin-top: 100px;
     margin-inline: 110px;
     column-gap: 2%;
     row-gap: 15px;
@@ -581,11 +589,6 @@ section.right a.buttonLong:hover, section.left a.buttonLong:hover {
         line-height: 1.5;
     }
 
-    .grid-container {
-        padding: 30px;
-	padding-bottom: 50px;
-    }
-
 }
 
 /* Add a black background color to the top navigation */
@@ -593,7 +596,7 @@ section.right a.buttonLong:hover, section.left a.buttonLong:hover {
     /* background-color: rgba(188, 188, 188, 0.375); */
     overflow: hidden;
     display: flex;
-    margin-top: -30px;
+    margin: 10px 10px;
     padding-right: 5%;
     justify-content: right;
     align-items: right;
@@ -610,7 +613,7 @@ section.right a.buttonLong:hover, section.left a.buttonLong:hover {
     border: 2px solid #000;
     border-radius: 12px;
     text-align: center;
-    padding: 9px 14px;
+    padding: 14px 14px;
     text-decoration: none;
     text-transform: uppercase;
     font-family: 'Inter Tight', sans-serif;
@@ -623,6 +626,7 @@ section.right a.buttonLong:hover, section.left a.buttonLong:hover {
 /* Change the color of links on hover */
 .topnav a:hover {
     background-color: #48a2b8;
+    color: #ffffff;
     transition: 0.7s;
 }
 
@@ -665,6 +669,14 @@ section.right a.buttonLong:hover, section.left a.buttonLong:hover {
         margin-top: 0px;
     }
 
+    .headertitle {
+        max-height: 53px;
+    }
+    .headertitlemain {
+        width: 65%;
+
+    }
+
     .headertitle h1 {
         margin: 10px auto;
     }
@@ -676,8 +688,13 @@ section.right a.buttonLong:hover, section.left a.buttonLong:hover {
 
     .headerSubtitle-sm {
         visibility: visible;
-
         
+    }
+
+    .topnav a {
+        height: 14px;
+        padding: 10px 10px;
+        margin: 5px;
     }
 
     .About {
@@ -686,7 +703,8 @@ section.right a.buttonLong:hover, section.left a.buttonLong:hover {
     }
 
     .grid-container {
-        margin-top: 50px;
+        margin-top: 80px;
+        margin-bottom: 30px;
         margin-inline: 0px;
         grid-template-columns: 100%;
     }
@@ -701,7 +719,7 @@ section.right a.buttonLong:hover, section.left a.buttonLong:hover {
     }
 
     .citylist {
-        top: 8%;
+        margin-top: 80px;
         margin-bottom: 10px;
 
     }
@@ -734,7 +752,6 @@ section.right a.buttonLong:hover, section.left a.buttonLong:hover {
 
 @media all and (max-width: 1200px) {
     .grid-container {
-        margin-top: 50px;
         grid-template-columns: auto;
     }
 
